Fix problem with scrolling behind header, add images.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,9 @@
   align-items: center;
   width: 100%;
   height: 80px;
+  position: fixed;
+  z-index: 1;
+  background-color: white;
 }
 
 .logo {
@@ -15,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-grow: 1;
 }
 
 .logo img {
@@ -23,13 +27,65 @@
   margin-right: 12px;
 }
 
-header nav {
-  display: inline-block;
-  padding-right: 40px
-  justify-content: flex-end;
+.content {
+  display: flex;
+  border: 1px solid black;
+  padding-top: 116px;
+  justify-content: center;
+  position: relative;
+}
+
+nav {
+  padding-right: 40px;
 }
 
 nav span {
+  display: inline-block;
   padding: 20px 10px;
+}
+
+nav span a {
   color: black;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
+}
+
+.column {
+  border: 1px solid black;
+  position: relative;
+  margin-right: 32px;
+}
+
+.main-headline {
+  border: 1px solid black;
+}
+
+.main-story {
+  border: 1px solid black;
+}
+
+.article {
+  border: 1px solid black;
+}
+
+.stories {
+  border: 1px solid black;
+}
+
+.text {
+
+}
+
+.news-bites {
+  border: 1px solid black;
 }
